1.3.5 - unreleased
==================


1.3.4 - 2009-09-22
==================

- Fix my previous Chameleon fix in criterion_edit_form.cpt, which broke
  creation of new criteria. This closes http://dev.plone.org/ticket/9522
  [davisagli]

1.3.3 - 2009-09-06
==================

- Subtopics shouldn't always acquire the 'start' query. Fixes 
  http://dev.plone.org/plone/ticket/8827 
  [pelle]

- Internationalized "Also in this section" in atct_topic_subtopics.pt.
  This closes http://dev.plone.org/plone/ticket/8383
  [massimo]

- Modified lib/constraintypes.py:getDefaultAddableTypes method to check
  isConstructionAllowed only for allowed types, not for all content types
  in portal_types. isConstructionAllowed was called twice for each types.
  [vincentfretin]

- Fix XHTML error in criterion_edit_form.cpt
  [davisagli]

1.3.2 - 2009-05-20
==================

* Added proper multi-lingual handling to the reference criterion. It should
  only show referenced content in the same or the neutral language if the
  uid catalog is language aware.
  [hannosch]

1.3.1 - 2009-04-28
==================

* Made it possible to set an empty value to a topic text field. This closes
  http://dev.plone.org/plone/ticket/7324.
  [dunlapm]

1.3.0 - 2009-03-11
==================

* Add support for generating iCal feeds for topics.
  This refs http://plone.org/products/plone/roadmap/246.
  [witsch]

* Add view for rendering events as an iCal feed as proposed by PLIP 246,
  http://plone.org/products/plone/roadmap/246.
  [witsch]

* Remove all code related to auto-sorting / auto-ordering folder as proposed
  by PLIP 241, http://plone.org/products/plone/roadmap/241.
  [witsch]

* Made the relative path criterion less prone for funky Acquisition chains.
  This refs http://dev.plone.org/plone/ticket/7686.
  [hannosch, maurits]

1.2.7 - 2009-01-30
==================

* Don't assume regular (non-btree) folders for next/previous support.
  [witsch]
