@@ -40,6 +40,13 @@ from Products.ATContentTypes.configuration import zconf
 from Products.ATContentTypes.config import HAS_PIL
 from Products.ATContentTypes import ATCTMessageFactory as _
 
+try:
+    from plone.app.blob.interfaces import IBlobImageField
+except ImportError:
+    from zope.interface import Interface
+    class IBlobImageField(Interface):
+        pass
+
 # third party extension
 import exif
 
@@ -97,12 +104,12 @@ class ATCTImageTransform(Base):
     def getImageAsFile(self, img=None, scale=None):
         """Get the img as file like object
         """
+        f = self.getField('image')
         if img is None:
-            f = self.getField('image')
             img = f.getScale(self, scale)
         # img.data contains the image as string or Pdata chain
         data = None
-        if isinstance(img, OFSImage):
+        if isinstance(img, OFSImage) or IBlobImageField.providedBy(f):
             data = str(img.data)
         elif isinstance(img, Pdata):
             data = str(img)
